[package]
name = "pretty-hash"
version = "0.4.0"
license = "MIT OR Apache-2.0"
repository = "https://github.com/datrs/pretty-hash"
documentation = "https://docs.rs/pretty-hash"
description = "Output binary buffers as a nice, shortened hex string."
authors = ["Yoshua Wuyts <yoshuawuyts@gmail.com>"]
readme = "README.md"

[dependencies]
failure = "0.1.1"
